test/org/midica/testfiles/failing/eff-flow-eff-not-set-1.midica
INCLUDE inc/instruments.midica


0: wait().set(50)

